2003-05-09  Jakub Steiner <jimmac@ximian.com>

	* Gorilla/icons/scalable/apps/web-browser.svg:
	* Gorilla/icons/scalable/apps/Makefile.am: add generic web
	  browser icon
	* Gorilla/icons/scalable/mimetypes/gnome-mime-text-x-authors.svg:
	* Gorilla/icons/scalable/mimetypes/gnome-mime-text-x-java.svg:
	* Gorilla/icons/scalable/mimetypes/gnome-mime-application-vnd.ms-excel.svg:
	* Gorilla/icons/scalable/mimetypes/Makefile.am:
	  more mimetype porting from older Gorilla

	* Gorilla/icons/index.theme.in: make icons a little smaller
	
2003-05-07  Jordi Mallach  <jordi@sindominio.net>

	* configure.in: Added "ca" to ALL_LINGUAS.

2003-05-07  Christian Neumair  <chris@gnome-de.org>

	* Nuvola/metacity-1/.cvsignore: Added.
	* Galaxy/index.theme.in: Marked Name and Comment fields
	for translation.
	* Galaxy/index.theme: Removed.
	* configure.in: Added "de" to ALL_LINGUAS.

2003-05-07  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "sv" to ALL_LINGUAS.

2003-05-03  Andrew Sobala  <aes@gnome.org>

	* configure.in (AC_OUTPUT): stop duplicate creation of Nuvola/metacity-1/Makefile

2003-05-01  Dennis Cranston <dennis_cranston at yahoo com>
       * Galaxy/gtk-2.0/galaxy_theme_draw.c:  Prevent a division by zero crash.

2003-04-29 Christian Schaller <uraeus@gnome.org>
	* Added Nuvola metacity theme by Josselin Mouette
	* Added some smaller SVG files for Nuvola by Adam Hooper 

2003-05-01  Yanko Kaneti  <yaneti@declera.com>

	* configure.in (AC_OUTPUT): create Nuvola/metacity-1/Makefile
	* Makefile.am (NUVOLA_TAR_FILES): add the metacity wm theme files. 
	* Nuvola/Makefile.am (SUBDIRS): actually use the metacity theme. 
	* gnome-themes-estras.spec.in: use GTK_BINARY_VERSION

2003-04-21  Alex Duggan  <aldug@gnome.org>

	* TODO: Initial import
	
	* Makefile.am: s/${TAR}/tar to work around problem on rh9

2003-04-18 Christian Schaller <uraues@gnome.org>
	* Update Nuvola metatheme
	* Adding Smooth Winther GTK theme to Nuvola